change is blank